--- a/my_simulations/package.xml
+++ b/my_simulations/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>my_simulations</name>
+  <name>slam_simulations</name>
   <version>0.0.0</version>
   <description>The my_simulations package</description>
 
