--- a/Navigation/base_local_planner_params.yaml
+++ b/Navigation/base_local_planner_params.yaml
@@ -1,11 +1,18 @@
 TrajectoryPlannerROS:
-  max_vel_x: 0.45
-  min_vel_x: 0.1
-  max_vel_theta: 1.0
-  min_in_place_vel_theta: 0.4
+  max_vel_x: 0.12
+  min_vel_x: 0.11
+  max_vel_theta: 0.05
+  min_vel_theta: -0.05
+  min_in_place_vel_theta: 0.05
 
-  acc_lim_theta: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
+  acc_lim_theta: 0.07
+  acc_lim_x: 0.25
+  acc_lim_Y: 0.25
 
   holonomic_robot: true
+
+  meter_scoring: true
+
+  xy_goal_tolerance: 0.15
+  yaw_goal_tolerance: 0.25
+  latch_xy_goal_tolerance: true
