--- a/package.xml
+++ b/package.xml
@@ -49,7 +49,53 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-
+  <!-- <buildtool_depend>catkin</buildtool_depend> -->
+  <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>urdf</build_depend>
+  <build_depend>controller_manager</build_depend>
+  <build_depend>gmapping</build_depend>
+  <build_depend>slam_gmapping</build_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>message_generation</build_depend>
+  <!-- <build_depend>rospy</build_depend> -->
+  <!-- <build_depend>std_msgs</build_depend> -->
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>joint_state_controller</build_depend>
+  <build_depend>robot_state_publisher</build_depend>
+  <build_depend>darknet_ros_msgs</build_depend>
+  <build_export_depend>roscpp</build_export_depend>
+  <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>urdf</build_export_depend>
+  <build_export_depend>controller_manager</build_export_depend>
+  <build_export_depend>joint_state_controller</build_export_depend>
+  <build_export_depend>robot_state_publisher</build_export_depend>
+  <build_export_depend>gmapping</build_export_depend>
+  <build_export_depend>slam_gmapping</build_export_depend>
+  <build_export_depend>cv_bridge</build_export_depend>
+  <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>darknet_ros_msgs</build_export_depend>
+  <build_export_depend>message_generation</build_export_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>urdf</exec_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>gmapping</exec_depend>
+  <exec_depend>slam_gmapping</exec_depend>
+  <exec_depend>joint_state_controller</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>message_generation</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
+  <!-- <exec_depend>rospy</exec_depend> -->
+  <exec_depend>sensor_msgs</exec_depend>
+  <!-- <exec_depend>std_msgs</exec_depend> -->
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>darknet_ros_msgs</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
@@ -57,3 +103,4 @@
 
   </export>
 </package>
+<!-- move_base my_tf_configuration_dep my_odom_configuration_dep my_sensor_configuration_dep -->
